<resources>
    <string name="app_name">SIT PAL</string>
    <string name="default_notification_channel_id">SITPAL</string>
    <!--COMMON-->
    <string name="loading_text">Loading…</string>
    <string name="team">TEAM</string>
    <string name="zp">诈骗</string>
    <string name="jt">集团</string>
    <string name="zpjt">TEAM 诈骗集团</string>
    <string name="logout_text">Proceed with logout?</string>
    <string name="no_internet">Please ensure that you are connected to the Internet and try again</string>
    <string name="share_text">Share via</string>
    <string name="share_text2">Share</string>
    <string name="email_format">%1$s@sit.singaporetech.edu.sg</string>
    <string name="date_format"><b>Date: </b>%1$s, %2$s</string>
    <string name="two_text_format"><b>%1$s: </b>%2$s</string>
    <string name="event_format">%1$s\n\nStart Time: %2$s\nEnd Time: %3$s\n\nVenue: %4$s, %5$s\n\nOrganized by: %6$s</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_okay">Okay</string>
    <string name="invalid_session_detected">An invalid session is detected!</string>
    <string name="invalid_session_message">Proceeding to logout</string>

    <!--LOGIN PAGE TEXT-->
    <string name="email_text">Email address</string>
    <string name="password_text">Password</string>
    <string name="login_text">SIGN IN</string>
    <string name="forgotten_text">Forgotten Password</string>
    <string name="footer_text">The one stop solution to your SIT needs</string>
    <string name="enter_email_text">Please enter your email address</string>
    <string name="enter_password_text">Please enter your password</string>
    <string name="error_credentials">Please check that you have entered the correct email/password</string>
    <string name="forgotten_password_title">Forgotten Password</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="submit_text">Submit</string>
    <string name="otp_text">OTP</string>
    <string name="otp_empty_text">Please enter your OTP</string>
    <string name="otp_error_text">Incorrect OTP entered</string>
    <string name="current_password_text">Current password</string>
    <string name="new_password_text">New password</string>
    <string name="retype_new_password">Re-type new password</string>
    <string name="reenter_password_text">Re-enter new password</string>

    <!--NAV BAR TEXT-->
    <string name="nav_service">Services</string>
    <string name="nav_home">Events</string>
    <string name="nav_reporting">Reports</string>
    <string name="nav_my_code">My QRCode</string>
    <string name="nav_books_booking">Library</string>
    <string name="nav_healthcare">Healthcare</string>
    <string name="nav_chat">Chats</string>
    <string name="nav_account">Account</string>
    <string name="nav_password">Password</string>
    <string name="nav_logout">Log Out</string>

    <!--EVENTS PAGE-->
    <string name="event_title">Events</string>
    <string name="no_event_text">No events found</string>
    <string name="join_event">Do you want to join event?</string>
    <string name="joined_button">JOINED</string>
    <string name="no_events_found">No events found!</string>

    <!--HEALTHCARE PAGE-->
    <string name="no_healtcare_text">No clinics found</string>
    <string name="healthcare_title">Clinic</string>


    <!--LIBRARY PAGE-->
    <string name="search_title">Search</string>
    <string name="enter_search">Enter search here</string>
    <string name="enter_search_placeholder">Please enter something</string>
    <string name="empty_library_search">No results found!</string>
    <string name="nothing_to_search">Please enter something to search</string>
    <string name="book_detail_title">Book Details</string>


    <!--ACCOUNT PAGE-->
    <string name="edit_account_text">Edit Account</string>
    <string name="name_text">Name</string>
    <string name="metric_text">Metric No.</string>
    <string name="phone_text">Phone No.</string>
    <string name="dob_text">Date of Birth</string>
    <string name="address_text">Address</string>
    <string name="course_text">Course</string>
    <string name="edit_password_text">Edit Password</string>
    <string name="change_password_label">Change Password</string>
    <string name="enter_new_password_label">Password</string>
    <string name="reenter_new_password_label">Re-enter Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_phone_text">Please enter a valid phone number</string>
    <string name="invalid_address_text">Please enter a valid address</string>
    <string name="empty_account_detail_text">Please ensure that both phone and address field are entered</string>
    <string name="update_account_details">Proceed with updating account?</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="edit_account">Edit My Account</string>
    <string name="change_password">Change Password</string>
    <string name="dob_not_found">DOB NOT FOUND</string>

    <!--REPORT PAGE-->
    <string name="create_report_title">Create Report</string>
    <string name="report_type">Select report type</string>
    <string name="report_text">Enter description here.</string>
    <string name="report_error">An error has occurred, please try again!</string>
    <string name="no_description_found">--- No description found ---</string>
    <string name="canceled_request">You have cancelled the request</string>
    <string name="select_location">SELECT LOCATION</string>
    <string name="select_school">SELECT SCHOOL</string>
    <string name="select_school_first">Please select School first</string>
    <string name="send_report_message">Proceed with sending report?</string>
    <string name="enter_description">Please select status or enter description</string>
    <string name="no_room_found">No rooms found</string>
    <string name="no_school_found">No school found</string>
    <string name="select_button">Select</string>
    <string name="camera_access_needed">Camera access is needed to take photos</string>
    <string name="permission_required">Permission Required</string>
    <string name="lnf">Lost &amp; Found</string>
    <string name="fault_reporting">Fault Reporting</string>

    <!--MY QR PAGE-->
    <string name="myqr_text">Scan your QR here</string>
    <string name="my_qr">My QR</string>
    <string name="my_attendance">My Attendance</string>

    <!--CHAT PAGE-->
    <string name="nav_available_chats">My Contacts</string>
    <string name="no_chat_found">No chats found</string>
    <string name="overflow_chat">99+</string>
    <string name="yes_im_danbai">蛋白</string>
</resources>
